Switch Expressions, Helpful NullPointerExceptions, Text Blocks